--- a/mediainquiries.css
+++ b/mediainquiries.css
@@ -1,8 +1,8 @@
-@media (min-width: 1200px) {
-    #hamburger-nav {
-        display: none; /* Hide the hamburger menu */
+@media screen and (max-width: 1200px) {
+    #desktop-nav {
+        display: none;
     }
-    .nav-links {
-        display: flex; /* Show the full navigation links */
+    #hamburger-nav {
+        display: flex;
     }
 }
