Updated and Repeated (Bug isn't solve yet)

--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ section {
 
 .about-containers {
     gap: 2rem;
-    margin-top: 2rem;
+    margin-bottom: 2rem;
     margin-top: 2rem;
 }
 
@@ -293,10 +293,10 @@ section {
     bottom: 2.5rem;
 }
 
-.details-containers {
+.details-container {
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background-color: white;
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
@@ -349,7 +349,9 @@ article {
     gap: 0.5rem;
 }
 
-article.icon {
+article .icon {
     cursor: default;
 }
+
+/* PROJECTS SECTION */
 
